--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.8.0",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
